[package]
name = "cqfrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitintr = "0.3.0"
libc = "0.2.147"

[dev-dependencies]
fastrand = "2.3.0"
hashbrown = "0.15.2"

[features]
debug = []

# bitintr is abandoned
# [patch.crates-io]
# bitintr = { git = "https://github.com/finnbear/bitintr", branch = "remove_nightly" }