[package]
name = "cqfrs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"

[dev-dependencies]
dashmap = { version = "6.1.0", features = ["rayon"] }
fastrand = "2.3.0"
hashbrown = "0.15.2"
rayon = "1.10.0"
tempfile = "3.19.1"

[features]
debug = []